Fix behave command in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py27
 [testenv]
 commands = 
     flake8
-    behave stuff/ behavior
+    behave test/features/
 deps =
     flake8
     behave
