--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py27
 [testenv]
 commands = 
     flake8
-    behave test/features/
+    behave tests/features/
 deps =
     flake8
     behave
