Add python3 support

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,11 @@
 [tox]
-envlist = py27
+envlist = py27, py35
 
 [testenv]
 commands = 
     flake8
     behave tests/features/
-deps =
-    flake8
-    behave
+deps = -rtest_requirements.txt
 
 [flake8]
 ignore = F401,E402
